docs/api/qiskit/0.19/qiskit.quantum_info.PTM.mdx
---
title: PTM (v0.19)
description: API reference for qiskit.quantum_info.PTM in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.quantum_info.PTM
---

# PTM

<Class id="qiskit.quantum_info.PTM" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/channel/ptm.py" signature="PTM(data, input_dims=None, output_dims=None)" modifiers="class">
  Pauli Transfer Matrix (PTM) representation of a Quantum Channel.

  The PTM representation of an $n$-qubit quantum channel $\mathcal{E}$ is an $n$-qubit [`SuperOp`](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp") $R$ defined with respect to vectorization in the Pauli basis instead of column-vectorization. The elements of the PTM $R$ are given by

$$
R_{i,j} = \mbox{Tr}\left[P_i \mathcal{E}(P_j) \right]
$$

  where $[P_0, P_1, ..., P_{4^{n}-1}]$ is the $n$-qubit Pauli basis in lexicographic order.

  Evolution of a [`DensityMatrix`](qiskit.quantum_info.DensityMatrix "qiskit.quantum_info.DensityMatrix") $\rho$ with respect to the PTM is given by

$$
|\mathcal{E}(\rho)\rangle\!\rangle_P = S_P |\rho\rangle\!\rangle_P
$$

  where $|A\rangle\!\rangle_P$ denotes vectorization in the Pauli basis $\langle i | A\rangle\!\rangle_P = \mbox{Tr}[P_i A]$.

  See reference \[1] for further details.

  **References**

  1.  C.J. Wood, J.D. Biamonte, D.G. Cory, *Tensor networks and graphical calculus for open quantum systems*, Quant. Inf. Comp. 15, 0579-0811 (2015). [arXiv:1111.6950 \[quant-ph\]](https://arxiv.org/abs/1111.6950)

  Initialize a PTM quantum channel operator.

  **Parameters**

  *   **or** (*data (*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – Instruction or BaseOperator or matrix): data to initialize superoperator.
  *   **input\_dims** (*tuple*) – the input subsystem dimensions. \[Default: None]
  *   **output\_dims** (*tuple*) – the output subsystem dimensions. \[Default: None]

  **Raises**

  **QiskitError** – if input data is not an N-qubit channel or cannot be initialized as a PTM.

  **Additional Information:**

  If the input or output dimensions are None, they will be automatically determined from the input data. The PTM representation is only valid for N-qubit channels.

  ## Attributes

  <span id="ptm-atol" />

  ### atol

  <Attribute id="qiskit.quantum_info.PTM.atol">
    The default absolute tolerance parameter for float comparisons.
  </Attribute>

  <span id="ptm-data" />

  ### data

  <Attribute id="qiskit.quantum_info.PTM.data">
    Return data.
  </Attribute>

  <span id="ptm-dim" />

  ### dim

  <Attribute id="qiskit.quantum_info.PTM.dim">
    Return tuple (input\_shape, output\_shape).
  </Attribute>

  <span id="ptm-num-qubits" />

  ### num\_qubits

  <Attribute id="qiskit.quantum_info.PTM.num_qubits">
    Return the number of qubits if a N-qubit operator or None otherwise.
  </Attribute>

  <span id="ptm-qargs" />

  ### qargs

  <Attribute id="qiskit.quantum_info.PTM.qargs">
    Return the qargs for the operator.
  </Attribute>

  <span id="ptm-rtol" />

  ### rtol

  <Attribute id="qiskit.quantum_info.PTM.rtol">
    The relative tolerance parameter for float comparisons.
  </Attribute>

  ## Methods

  <span id="ptm-call" />

  ### \_\_call\_\_

  <Function id="qiskit.quantum_info.PTM.__call__" signature="PTM.__call__(qargs)">
    Return a clone with qargs set
  </Function>

  <span id="ptm-mul" />

  ### \_\_mul\_\_

  <Function id="qiskit.quantum_info.PTM.__mul__" signature="PTM.__mul__(other)" />

  <span id="ptm-add" />

  ### add

  <Function id="qiskit.quantum_info.PTM.add" signature="PTM.add(other)">
    Return the linear operator self + other.

    DEPRECATED: use `operator + other` instead.

    **Parameters**

    **other** (*BaseOperator*) – an operator object.

    **Returns**

    the operator self + other.

    **Return type**

    BaseOperator
  </Function>

  <span id="ptm-adjoint" />

  ### adjoint

  <Function id="qiskit.quantum_info.PTM.adjoint" signature="PTM.adjoint()">
    Return the adjoint of the operator.
  </Function>

  <span id="ptm-compose" />

  ### compose

  <Function id="qiskit.quantum_info.PTM.compose" signature="PTM.compose(other, qargs=None, front=False)">
    Return the composed quantum channel self @ other.

    **Parameters**

    *   **other** (*QuantumChannel*) – a quantum channel.
    *   **qargs** (*list or None*) – a list of subsystem positions to apply other on. If None apply on all subsystems \[default: None].
    *   **front** (*bool*) – If True compose using right operator multiplication, instead of left multiplication \[default: False].

    **Returns**

    The quantum channel self @ other.

    **Return type**

    [PTM](qiskit.quantum_info.PTM "qiskit.quantum_info.PTM")

    **Raises**

    **QiskitError** – if other has incompatible dimensions.

    #### Additional Information:

    Composition (`@`) is defined as left matrix multiplication for [`SuperOp`](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp") matrices. That is that `A @ B` is equal to `B * A`. Setting `front=True` returns right matrix multiplication `A * B` and is equivalent to the [`dot()`](qiskit.quantum_info.PTM#dot "qiskit.quantum_info.PTM.dot") method.
  </Function>

  <span id="ptm-conjugate" />

  ### conjugate

  <Function id="qiskit.quantum_info.PTM.conjugate" signature="PTM.conjugate()">
    Return the conjugate of the QuantumChannel.
  </Function>

  <span id="ptm-copy" />

  ### copy

  <Function id="qiskit.quantum_info.PTM.copy" signature="PTM.copy()">
    Make a deep copy of current operator.
  </Function>

  <span id="ptm-dot" />

  ### dot

  <Function id="qiskit.quantum_info.PTM.dot" signature="PTM.dot(other, qargs=None)">
    Return the right multiplied operator self \* other.

    **Parameters**

    *   **other** (*BaseOperator*) – an operator object.
    *   **qargs** (*list or None*) – a list of subsystem positions to apply other on. If None apply on all subsystems \[default: None].

    **Returns**

    The operator self \* other.

    **Return type**

    BaseOperator

    **Raises**

    **QiskitError** – if other cannot be converted to an operator, or has incompatible dimensions for specified subsystems.
  </Function>

  <span id="ptm-expand" />

  ### expand

  <Function id="qiskit.quantum_info.PTM.expand" signature="PTM.expand(other)">
    Return the tensor product channel other ⊗ self.

    **Parameters**

    **other** (*QuantumChannel*) – a quantum channel.

    **Returns**

    the tensor product channel other ⊗ self as a PTM object.

    **Return type**

    [PTM](qiskit.quantum_info.PTM "qiskit.quantum_info.PTM")

    **Raises**

    **QiskitError** – if other cannot be converted to a channel.
  </Function>

  <span id="ptm-input-dims" />

  ### input\_dims

  <Function id="qiskit.quantum_info.PTM.input_dims" signature="PTM.input_dims(qargs=None)">
    Return tuple of input dimension for specified subsystems.
  </Function>

  <span id="ptm-is-cp" />

  ### is\_cp

  <Function id="qiskit.quantum_info.PTM.is_cp" signature="PTM.is_cp(atol=None, rtol=None)">
    Test if Choi-matrix is completely-positive (CP)
  </Function>

  <span id="ptm-is-cptp" />

  ### is\_cptp

  <Function id="qiskit.quantum_info.PTM.is_cptp" signature="PTM.is_cptp(atol=None, rtol=None)">
    Return True if completely-positive trace-preserving (CPTP).
  </Function>

  <span id="ptm-is-tp" />

  ### is\_tp

  <Function id="qiskit.quantum_info.PTM.is_tp" signature="PTM.is_tp(atol=None, rtol=None)">
    Test if a channel is completely-positive (CP)
  </Function>

  <span id="ptm-is-unitary" />

  ### is\_unitary

  <Function id="qiskit.quantum_info.PTM.is_unitary" signature="PTM.is_unitary(atol=None, rtol=None)">
    Return True if QuantumChannel is a unitary channel.
  </Function>

  <span id="ptm-multiply" />

  ### multiply

  <Function id="qiskit.quantum_info.PTM.multiply" signature="PTM.multiply(other)">
    Return the linear operator other \* self.

    DEPRECATED: use `other * operator` instead.

    **Parameters**

    **other** (*complex*) – a complex number.

    **Returns**

    the linear operator other \* self.

    **Return type**

    BaseOperator

    **Raises**

    **NotImplementedError** – if subclass does not support multiplication.
  </Function>

  <span id="ptm-output-dims" />

  ### output\_dims

  <Function id="qiskit.quantum_info.PTM.output_dims" signature="PTM.output_dims(qargs=None)">
    Return tuple of output dimension for specified subsystems.
  </Function>

  <span id="ptm-power" />

  ### power

  <Function id="qiskit.quantum_info.PTM.power" signature="PTM.power(n)">
    The matrix power of the channel.

    **Parameters**

    **n** (*int*) – compute the matrix power of the superoperator matrix.

    **Returns**

    the matrix power of the SuperOp converted to a PTM channel.

    **Return type**

    [PTM](qiskit.quantum_info.PTM "qiskit.quantum_info.PTM")

    **Raises**

    **QiskitError** – if the input and output dimensions of the QuantumChannel are not equal, or the power is not an integer.
  </Function>

  <span id="ptm-reshape" />

  ### reshape

  <Function id="qiskit.quantum_info.PTM.reshape" signature="PTM.reshape(input_dims=None, output_dims=None)">
    Return a shallow copy with reshaped input and output subsystem dimensions.

    #### Arg:

    #### input\_dims (None or tuple): new subsystem input dimensions.

    If None the original input dims will be preserved \[Default: None].

    #### output\_dims (None or tuple): new subsystem output dimensions.

    If None the original output dims will be preserved \[Default: None].

    **Returns**

    returns self with reshaped input and output dimensions.

    **Return type**

    BaseOperator

    **Raises**

    **QiskitError** – if combined size of all subsystem input dimension or subsystem output dimensions is not constant.
  </Function>

  <span id="ptm-set-atol" />

  ### set\_atol

  <Function id="qiskit.quantum_info.PTM.set_atol" signature="PTM.set_atol(value)" modifiers="classmethod">
    Set the class default absolute tolerance parameter for float comparisons.
  </Function>

  <span id="ptm-set-rtol" />

  ### set\_rtol

  <Function id="qiskit.quantum_info.PTM.set_rtol" signature="PTM.set_rtol(value)" modifiers="classmethod">
    Set the class default relative tolerance parameter for float comparisons.
  </Function>

  <span id="ptm-subtract" />

  ### subtract

  <Function id="qiskit.quantum_info.PTM.subtract" signature="PTM.subtract(other)">
    Return the linear operator self - other.

    DEPRECATED: use `operator - other` instead.

    **Parameters**

    **other** (*BaseOperator*) – an operator object.

    **Returns**

    the operator self - other.

    **Return type**

    BaseOperator
  </Function>

  <span id="ptm-tensor" />

  ### tensor

  <Function id="qiskit.quantum_info.PTM.tensor" signature="PTM.tensor(other)">
    Return the tensor product channel self ⊗ other.

    **Parameters**

    **other** (*QuantumChannel*) – a quantum channel.

    **Returns**

    the tensor product channel self ⊗ other as a PTM object.

    **Return type**

    [PTM](qiskit.quantum_info.PTM "qiskit.quantum_info.PTM")

    **Raises**

    **QiskitError** – if other cannot be converted to a channel.
  </Function>

  <span id="ptm-to-instruction" />

  ### to\_instruction

  <Function id="qiskit.quantum_info.PTM.to_instruction" signature="PTM.to_instruction()">
    Convert to a Kraus or UnitaryGate circuit instruction.

    If the channel is unitary it will be added as a unitary gate, otherwise it will be added as a kraus simulator instruction.

    **Returns**

    A kraus instruction for the channel.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **QiskitError** – if input data is not an N-qubit CPTP quantum channel.
  </Function>

  <span id="ptm-to-operator" />

  ### to\_operator

  <Function id="qiskit.quantum_info.PTM.to_operator" signature="PTM.to_operator()">
    Try to convert channel to a unitary representation Operator.
  </Function>

  <span id="ptm-transpose" />

  ### transpose

  <Function id="qiskit.quantum_info.PTM.transpose" signature="PTM.transpose()">
    Return the transpose of the QuantumChannel.
  </Function>
</Class>

